# marrow

./: .dockerignore  .gitignore  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.sh  llms.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: benchmark-chart.js  cover.js  hivemind.js  problem.js  sourcetruth.js
bench/: OUTCOME-STUDY.md  REPORT.md  outcomes-template.csv
crates/marrow-bench/: Cargo.toml
crates/marrow-bench/src/: lib.rs  main.rs
crates/marrow-cli/: Cargo.toml
crates/marrow-cli/src/: lib.rs  main.rs  setup.rs
crates/marrow-cli/tests/: cli.rs
crates/marrow-core/: Cargo.toml
crates/marrow-core/src/: anchor.rs  fingerprint.rs  lib.rs  parser.rs  relocation.rs  symbols.rs  types.rs
crates/marrow-core/tests/: scenarios.rs
crates/marrow-episodic/: Cargo.toml
crates/marrow-episodic/src/: lib.rs
crates/marrow-mcp/: Cargo.toml
crates/marrow-mcp/src/: lib.rs  main.rs  prompts.rs  remote.rs  tools.rs
crates/marrow-memdocs/: Cargo.toml
crates/marrow-memdocs/src/: document.rs  lib.rs  types.rs  validate.rs
crates/marrow-server/: Cargo.toml
crates/marrow-server/src/: lib.rs  main.rs
crates/marrow-store/: Cargo.toml
crates/marrow-store/src/: associative.rs  channel.rs  config.rs  consolidate.rs  convert.rs  coordinate.rs  distill_http.rs  edge.rs  embed.rs  embed_fastembed.rs  embed_http.rs  hub.rs  index.rs  integrity.rs  lib.rs  provenance.rs  query.rs  rank.rs  sharing.rs  staleness.rs  store.rs  util.rs
crates/marrow-store/tests/: integration.rs
crates/marrow-web/: Cargo.toml
crates/marrow-web/assets/: dashboard.html
crates/marrow-web/src/: graph.rs  lib.rs  main.rs
crates/marrow-web/tests/: api.rs
deploy/: Dockerfile  README.md  docker-compose.yml  fly.toml
e2e/: smoke.sh
examples/: two-session-demo.sh
integrations/: README.md
integrations/claude-code/: README.md  install.sh  settings.example.json
integrations/claude-code/commands/: marrow-save.md
integrations/claude-code/hooks/: marrow-bootstrap.sh  marrow-distill.sh  marrow-finished.sh  marrow-guard.sh  marrow-progress.sh  marrow-release.sh  marrow-stop.sh  marrow-watch.sh
python/marrow-anthropic/: README.md  pyproject.toml
python/marrow-anthropic/src/marrow_anthropic/: __init__.py  backend.py  store.py
python/marrow-anthropic/tests/: test_backend.py  test_store.py
spike/staleness/: .gitignore  README.md  fetch_corpus.sh  pyproject.toml
spike/staleness/staleness_spike/: __init__.py  astutils.py  mutations.py  report.py  run.py  runner.py  scoring.py  seeding.py  types.py
spike/staleness/staleness_spike/strategies/: __init__.py  base.py  s1_exact.py  s2_normalized.py  s3_ast.py  s4_relocation.py
spike/staleness/tests/: conftest.py  test_astutils.py  test_mutations.py  test_registry.py  test_report.py  test_runner.py  test_s1_exact.py  test_s2_normalized.py  test_s3_ast.py  test_s4_relocation.py  test_scoring.py  test_seeding.py  test_types.py
