[package]
name = "marrow-bench"
version = "0.5.0"
edition = "2021"
description = "Reproducible benchmarks for Marrow's memory, freshness, and coordination mechanisms."
license = "AGPL-3.0-only"
repository = "https://github.com/aryawidjaja/marrow"

[[bin]]
name = "marrow-bench"
path = "src/main.rs"

[dependencies]
marrow-store = { path = "../marrow-store" }
marrow-memdocs = { path = "../marrow-memdocs" }
marrow-core = { path = "../marrow-core" }
serde_json = "1"
tempfile = "3"
