[package]
name = "marrow-cli"
version = "0.2.0"
edition = "2021"
description = "Command-line interface for the Marrow memory store."
license = "AGPL-3.0-only"
repository = "https://github.com/aryawidjaja/marrow"

[[bin]]
name = "marrow"
path = "src/main.rs"

[dependencies]
marrow-store = { path = "../marrow-store" }
marrow-memdocs = { path = "../marrow-memdocs" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[features]
embed-fastembed = ["marrow-store/embed-fastembed"]
embed-http = ["marrow-store/embed-http"]

[dev-dependencies]
tempfile = "3"
