[package]
name = "marrow-core"
version = "0.3.0"
edition = "2021"
description = "Markdown-native memory primitives for AI agents: code-anchored staleness detection."
license = "AGPL-3.0-only"
repository = "https://github.com/aryawidjaja/marrow"

[dependencies]
sha2 = "0.11.0"
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"

[dev-dependencies]
tempfile = "3.27.0"
