[package]
name = "marrow-episodic"
version = "0.1.5"
edition = "2021"
description = "Append-only, hash-chained event ledger for Marrow: the episodic memory and tamper-evident audit trail."
license = "AGPL-3.0-only"
repository = "https://github.com/aryawidjaja/marrow"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
fs2 = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
tempfile = "3"
