[package]
name = "marrow-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol server exposing the Marrow memory store to agents."
license = "MIT"

[[bin]]
name = "marrow-mcp"
path = "src/main.rs"

[dependencies]
marrow-store = { path = "../marrow-store" }
marrow-memdocs = { path = "../marrow-memdocs" }
marrow-core = { path = "../marrow-core" }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
