[package]
name = "marrow-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol server exposing the Marrow memory store to agents."
license = "AGPL-3.0-only"
repository = "https://github.com/aryawidjaja/marrow"

[[bin]]
name = "marrow-mcp"
path = "src/main.rs"

[dependencies]
marrow-store = { path = "../marrow-store" }
marrow-memdocs = { path = "../marrow-memdocs" }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
