[package]
name = "marrow-mcp"
version = "0.1.6"
edition = "2021"
description = "Model Context Protocol server exposing the Marrow memory store to agents."
license = "AGPL-3.0-only"
repository = "https://github.com/aryawidjaja/marrow"

[[bin]]
name = "marrow-mcp"
path = "src/main.rs"

[dependencies]
marrow-store = { path = "../marrow-store" }
marrow-memdocs = { path = "../marrow-memdocs" }
serde_json = "1"

[features]
embed-fastembed = ["marrow-store/embed-fastembed"]
embed-http = ["marrow-store/embed-http"]

[dev-dependencies]
tempfile = "3"
