[package]
name = "marrow-memdocs"
version = "0.4.0"
edition = "2021"
description = "Markdown memory documents: typed frontmatter, base schemas, and validation for Marrow."
license = "AGPL-3.0-only"
repository = "https://github.com/aryawidjaja/marrow"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
