[package]
name = "marrow-server"
version = "0.5.0"
edition = "2021"
description = "Marrow served backbone: an authenticated HTTP endpoint so agents across devices share one brain."
license = "AGPL-3.0-only"
repository = "https://github.com/aryawidjaja/marrow"

[[bin]]
name = "marrow-server"
path = "src/main.rs"

[dependencies]
marrow-store = { path = "../marrow-store" }
marrow-mcp = { path = "../marrow-mcp" }
serde_json = "1"
tiny_http = "0.12"

[dev-dependencies]
tempfile = "3"
