[package]
name = "marrow-store"
version = "0.1.0"
edition = "2021"
description = "Marrow memory store: markdown persistence, SQLite/FTS5 index, staleness, decay, scope, and integrity."
license = "MIT"

[dependencies]
marrow-memdocs = { path = "../marrow-memdocs" }
marrow-core = { path = "../marrow-core" }
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
ulid = "1"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
toml = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
marrow-memdocs = { path = "../marrow-memdocs" }
marrow-core = { path = "../marrow-core" }

[features]
embed-http = []
embed-fastembed = []
