[package]
name = "marrow-web"
version = "0.1.0"
edition = "2021"
description = "A local dashboard for the Marrow memory store: see staleness and consolidation as they happen."
license = "MIT"

[[bin]]
name = "marrow-serve"
path = "src/main.rs"

[dependencies]
marrow-store = { path = "../marrow-store" }
serde_json = "1"
tiny_http = "0.12"

[dev-dependencies]
tempfile = "3"
marrow-memdocs = { path = "../marrow-memdocs" }
