[package]
name = "marrow-web"
version = "0.5.0"
edition = "2021"
description = "A local dashboard for the Marrow memory store: see staleness and consolidation as they happen."
license = "AGPL-3.0-only"
repository = "https://github.com/aryawidjaja/marrow"

[[bin]]
name = "marrow-serve"
path = "src/main.rs"

[dependencies]
marrow-store = { path = "../marrow-store" }
marrow-episodic = { path = "../marrow-episodic" }
marrow-memdocs = { path = "../marrow-memdocs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"

[dev-dependencies]
tempfile = "3"
